styles/scss/gbarbosa.mega-menu.scss
@import "./references";

.menuDesktopContainer {
  position: relative;
  font-family: "OpenSans", sans-serif;
  .menuDesktopWrapper {
    position: fixed;
    top: 116px;
    left: calc((100vw - 1470px) / 2);
    width: 100vw;
    height: 100vh;
    display: flex;
    .menuDepartments {
      background-color: #f0f0f0;
      display: flex;
      flex-direction: column;
      width: 272px;
      height: 75vh;
      position: relative;
      padding-top: 5px;
      max-height: 524px;
      box-shadow: 0px 3px 10px 0 #00000029;
      &::before {
        content: "";
        width: 15px;
        height: 15px;
        background: #f0f0f0;
        position: absolute;
        top: -5px;
        left: 110px;
        transform: rotate(45deg);
        @media (max-width: 1400px) {
          left: 60px;
        }
      }
      .menuDepartmentWrapper {
        display: flex;
        position: relative;
        width: 100%;
        .menuDepartmentLink {
          background-color: #f0f0f0;
          padding: 5px 10px;
          display: flex;
          align-items: center;
          text-decoration: none;
          width: 100%;
          position: relative;
          .menuDepartmentName {
            color: #525252;
            font-size: 14px;
            font-weight: bold;
            margin-left: 10px;
          }
          .menuDepartmentIcon {
            width: 24px;
            height: 24px;
          }
          &::after {
            content: "";
            display: flex;
            background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' id='icon_go' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg id='Grupo_1778' data-name='Grupo 1778'%3E%3Crect id='Retângulo_2279' data-name='Retângulo 2279' width='24' height='24' fill='none'/%3E%3C/g%3E%3Cg id='Grupo_1781' data-name='Grupo 1781'%3E%3Cg id='Grupo_1780' data-name='Grupo 1780'%3E%3Cg id='Grupo_1779' data-name='Grupo 1779'%3E%3Cpath id='Caminho_7133' data-name='Caminho 7133' d='M9.29,15.46l3.88-3.88L9.29,7.7a1,1,0,0,1,0-1.41h0a1,1,0,0,1,1.41,0l4.59,4.59a1,1,0,0,1,0,1.41L10.7,16.88a1,1,0,0,1-1.41,0h0A1.017,1.017,0,0,1,9.29,15.46Z' fill='%23898989'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E")
              no-repeat;
            width: 15px;
            height: 20px;
            position: absolute;
            right: 7px;
          }
        }
        .menuCategoriesContainer {
          background-color: #fafafa;
          position: fixed;
          width: 100vw;
          height: 69vh;
          left: calc((100vw - 926px) / 2);
          top: 117px;
          max-width: 1120px;
          max-height: 523px;
          box-shadow: 20px 0px 31px #00000029;
          .menuCategoriesWrapper {
            display: flex;
            position: relative;
            .menuCategoryLink {
              min-width: 272px;
              color: #525252;
              font-size: 14px;
              text-decoration: none;
              padding: 9px 0;
              padding-left: 17px;
              position: relative;
              &::after {
                content: "";
                display: flex;
                background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' id='icon_go' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg id='Grupo_1778' data-name='Grupo 1778'%3E%3Crect id='Retângulo_2279' data-name='Retângulo 2279' width='24' height='24' fill='none'/%3E%3C/g%3E%3Cg id='Grupo_1781' data-name='Grupo 1781'%3E%3Cg id='Grupo_1780' data-name='Grupo 1780'%3E%3Cg id='Grupo_1779' data-name='Grupo 1779'%3E%3Cpath id='Caminho_7133' data-name='Caminho 7133' d='M9.29,15.46l3.88-3.88L9.29,7.7a1,1,0,0,1,0-1.41h0a1,1,0,0,1,1.41,0l4.59,4.59a1,1,0,0,1,0,1.41L10.7,16.88a1,1,0,0,1-1.41,0h0A1.017,1.017,0,0,1,9.29,15.46Z' fill='%23898989'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E")
                  no-repeat;
                width: 15px;
                height: 20px;
                position: absolute;
                top: 7px;
                right: 7px;
              }
            }
            .menuSubCategoryContainer {
              display: flex;
              justify-content: space-between;
              position: fixed;
              width: 100vw;
              height: 60vh;
              left: calc((100vw - 365px) / 2);
              top: 115px;
              max-width: 840px;
              .menuSubCategoryColunm {
                flex-direction: column;
                margin-top: 70px;
                .menuSubCategoryWrapper {
                  padding: 10px 0;
                  .menuSubCategoryLink {
                    color: #525252;
                    font-size: 14px;
                    text-decoration: none;
                    &:hover {
                      font-weight: bold;
                      color: #ed1d25;
                    }
                  }
                }
                @media (max-width: 1400px) {
                  position: relative;
                  display: flex;
                  left: 559px;
                }
              }
              .menuDepartmentBannerContainer {
                .menuDepartmentBanner {
                  max-height: 524px;
                }
              }
              @media (max-width: 1400px) {
                left: 0;
                max-width: 100%;
              }
            }
          }
          @media (max-width: 1400px) {
            left: 270px;
          }
        }
        &:last-child {
          border-top: 1px solid #dddddd;
        }
      }
    }
    @media (max-width: 1400px) {
      left: 0;
    }
  }
}
.menuDepartmentNameHover {
  background-color: #ed1d25 !important;
  &::after {
    display: flex;
    filter: invert(100%) sepia(100%) saturate(15%) hue-rotate(98deg)
      brightness(200%) contrast(101%);
  }
  .menuDepartmentName {
    color: #fff !important;
  }
  .menuDepartmentIcon {
    filter: invert(100%) sepia(100%) saturate(15%) hue-rotate(98deg)
      brightness(200%) contrast(101%);
  }
}
/* ... */

